# coding_agent_cli_toolset

./: .editorconfig  .env.default  .envrc  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  COPILOT.md  GEMINI.md  Makefile  README.md  SECURITY.md  audit.py  cli_audit.py  config.json.example  latest_versions.json  mypy.ini  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  smart_column.py  tools_snapshot.json  upstream_versions.json
.beads/: ai_cli_preparation.db
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  release.yml  scorecard.yml  security.yml
.serena/: project.yml
.serena/memories/: codebase_structure.md  known_issues_and_notes.md  project_overview.md  refactoring_2025_nov_status.md  style_and_conventions.md  suggested_commands.md  task_completion_checklist.md
Makefile.d/: dev.mk  maint.mk  shortcuts.mk  user.mk
catalog/: CATALOG_SUMMARY.md  COVERAGE.md  README.md  actionlint.json  ansible-core.json  ansible.json  ast-grep.json  aws.json  bandit.json  bat.json  black.json  claude.json  codex.json  compose.json  composer.json  cscope.json  ctags.json  curlie.json  dasel.json  delta.json  difftastic.json  direnv.json  dive.json  docker-compose.json  docker.json  dust.json  entr.json  eslint.json  fd.json  flake8.json  fx.json  fzf.json  gam.json  gcloud.json  gem.json  gemini.json  gh-aw-firewall.json  gh-aw.json  gh.json  git-absorb.json  (+64 more)
claudedocs/: project_context.md  session_summary.md
cli_audit/: AGENTS.md  __init__.py  breaking_changes.py  bulk.py  catalog.py  collectors.py  common.py  config.py  detection.py  environment.py  install_plan.py  installer.py  local_state.py  logging_config.py  package_managers.py  pins.py  prerequisites.py  reconcile.py  render.py  snapshot.py  tools.py  upgrade.py  upstream_cache.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  CATALOG_GUIDE.md  CLI_REFERENCE.md  CODE_REVIEW.md  CONFIGURATION_SPEC.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  DEVELOPMENT_QUICKSTART.md  DOCUMENTATION_ORGANIZATION.md  ERROR_CATALOG.md  FUNCTION_REFERENCE.md  INDEX.md  INTEGRATION_EXAMPLES.md  LOGGING.md  MIGRATION_GUIDE.md  PHASE2_API_REFERENCE.md  PHASE2_COMPLETION_REPORT.md  PHASE2_IMPLEMENTATION.md  PRD.md  PROJECT_GUIDE.md  QUICK_REFERENCE.md  TESTING.md  TOOL_ECOSYSTEM.md  TROUBLESHOOTING.md
docs/adr/: ADR-001-context-aware-installation.md  ADR-002-package-manager-hierarchy.md  ADR-003-parallel-installation-approach.md  ADR-004-always-latest-version-policy.md  ADR-005-environment-detection.md  ADR-006-configuration-file-format.md  ADR-007-generic-tool-installation-architecture.md  ADR-008-makefile-pattern-target-fallback.md  ADR-009-first-class-multi-install.md  README.md
docs/phase2_api/: environment.md
scripts/: AGENTS.md  README.md  README.md.old  auto_update.sh  auto_update_scope_prototype.sh  check_node_package_managers.sh  check_python_package_managers.sh  cleanup.sh  guide.sh  guide.sh.old  install_ansible.sh  install_aws.sh  install_brew.sh  install_claude.sh  install_composer.sh  install_core.sh  install_core.sh.obsolete  install_docker.sh  install_gem.sh  install_go.sh  install_group.sh  install_kubectl.sh  install_node.sh  install_parallel.sh  install_pip.sh  install_python.sh  install_ruby.sh  install_rust.sh  install_terraform.sh  install_tmux.sh  install_tool.sh  install_tree.sh  install_uv.sh  install_wslu.sh  install_yarn.sh  pin_version.sh  reconcile_pip_to_uv.sh  reconcile_pipx_to_uv.sh  reset_pins.sh  set_auto_update.sh  (+3 more)
scripts/installers/: aws_installer.sh  dedicated_script.sh  docker_plugin.sh  gcloud_installer.sh  github_clone.sh  github_release_binary.sh  go_install.sh  hashicorp_zip.sh  npm_global.sh  npm_self_update.sh  package_manager.sh  uv_tool.sh
scripts/lib/: capability.sh  catalog.sh  common.sh  config.sh  dependency.sh  install_strategy.sh  path_check.sh  pins.sh  policy.sh  reconcile.sh  scope_detection.sh
tests/: AGENTS.md  __init__.py  test_bulk.py  test_catalog_and_collectors.py  test_config.py  test_environment.py  test_guide_multi_install.sh  test_install_plan.py  test_installer.py  test_local_state.py  test_logging.py  test_package_managers.py  test_pins.py  test_prerequisites.py  test_reconcile.py  test_render.py  test_update_fixes.py  test_upgrade.py  test_upstream_cache.py  test_wsl_gating.py
tests/fixtures/: config_invalid_env.yml  config_invalid_version.yml  config_minimal.yml  config_project.yml  config_user.yml  config_valid.yml
tests/integration/: __init__.py  test_e2e_install.py
